增加ajax发送header；增加公共变量‘后端地址’

--- a/config/config-main_zh.properties
+++ b/config/config-main_zh.properties
@@ -4,3 +4,5 @@ router_num=17
 router_width=6,6,6,6,6,6,6,6,6,6,6,6,12,8,4,4,8
 #\u9700\u8981\u9690\u85CF\u7684\u56FE\u8868\u7F16\u53F7
 router_hidden=1,2,3,4,5,6,7,8,9,10,11,12,13
+#\u540E\u7AEFip\u5730\u5740
+http_api=http://127.0.0.1:8080
